--- a/pacman.conf
+++ b/pacman.conf
@@ -85,6 +85,9 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
+[community]
+Include = /etc/pacman.d/endeavouros-mirrorlist
+
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
@@ -96,6 +99,6 @@ Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
+[custom]
+SigLevel = Optional TrustAll
+Server = file:///home/madhur/archmadhur/local/repo
