initial commit for arch iso

--- a/pacman.conf
+++ b/pacman.conf
@@ -39,8 +39,10 @@ ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
-SigLevel    = Required DatabaseOptional
+#SigLevel    = Required DatabaseOptional
 LocalFileSigLevel = Optional
+SigLevel = Optional
+RemoteFileSigLevel = Optional
 #RemoteFileSigLevel = Required
 
 # NOTE: You must run `pacman-key --init` before first using pacman; the local
@@ -85,7 +87,8 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-[community]
+[endeavouros]
+SigLevel = PackageRequired
 Include = /etc/pacman.d/endeavouros-mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
